# streamscpp

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/streams++/: chain.hpp  file-streams.hpp  http-streams.hpp  memory-streams.hpp  package.hpp  path.hpp  streams.hpp  types.hpp  utils.hpp
include/streams++/producers/: directory.hpp  vector.hpp
include/streams++/transformers/: directory.hpp
src/: CMakeLists.txt  archive-streams.cpp  archive.cpp  chain.cpp  downloader.cpp  downloader.hpp  file-streams.cpp  http-streams.cpp  memory-streams.cpp  package.cpp  utils.cpp
src/producers/: directory.cpp  vector.cpp
src/transformers/: directory.cpp
unused/: archive-streams.hpp  archive.hpp  http-streams.cpp
